# Enterprise-Data-Processing-Pipeline

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: pipeline.example.yaml
data/output/: customers_clean.csv  customers_rejected.csv
data/sample/: customers.csv
src/pipeline/: __init__.py  __main__.py  cli.py
src/pipeline/connectors/: __init__.py  base.py  file_connectors.py  memory_connector.py
src/pipeline/core/: __init__.py  config.py  context.py  exceptions.py  orchestrator.py  registry.py
src/pipeline/observability/: __init__.py  logging.py
src/pipeline/transforms/: __init__.py  base.py  builtin.py
src/pipeline/validation/: __init__.py  validator.py
tests/: conftest.py  test_cli.py  test_config.py  test_connectors.py  test_orchestrator.py  test_registry.py  test_transforms.py  test_validation.py
